syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
}

/* Requests/Responses */

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  // Return results based off the Race Meeting Identifiers (Optional)
  repeated int64 meeting_ids = 1;
  // Only return races marked as visible
  bool only_visible = 2;
  // Sort on returned fields
  Sort sort = 3;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // Status
  string status = 7;
}

// Allow sorting on custom fields. Takes asc for Ascending, desc for descending
// Sorts in the order passed (1st field populated, 2nd field populated, etc)
// When adding new fields, make sure they match values and order returned in the response
message Sort {
  // Sort by Advertised Start Time
  string advertised_start_time = 1;
}
